# claude-lint

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  COMPETITIVE-ANALYSIS.md  COMPETITOR-FEATURES.md  Cargo.toml  Makefile  PROPOSED_AGNIX_CHANGES.txt  README.md  SECURITY.md  action.yml  package.json
.claude/: settings.json
.claude/skills/bump-version/: SKILL.md
.claude/skills/bump-version/scripts/: apply-bump.sh  classify-bump.sh
.claude/skills/relevant-checks/: SKILL.md
.claude/skills/relevant-checks/scripts/: run-checks.sh
.github/workflows/: ci.yaml  release.yml
docs/: cli.md  configuration.md  development.md  github-action.md  rules.md
scripts/: install.sh  pre-commit-hook.sh  shellcheck-scripts.sh
src/: autofix.rs  config.rs  context.rs  diagnostic.rs  fence.rs  frontmatter.rs  main.rs  rules.rs  test_helpers.rs
src/validators/: agents.rs  common.rs  docs.rs  email.rs  hooks.rs  hygiene.rs  manifest.rs  mod.rs  skill_content.rs  skills.rs  slack.rs  user_config.rs  walk.rs
src/validators/hygiene/: dead_scripts.rs  mod.rs  pwd.rs  scripts.rs  security_md.rs  todo.rs
src/validators/skill_content/: body.rs  cross_field.rs  cross_skill.rs  description.rs  frontmatter_extended.rs  frontmatter_fields.rs  mcp.rs  mod.rs  name.rs  security.rs
