[package]
name = "claude-lint"
version = "1.0.16"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Configuration linter for Claude Code"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
toml = "0.8"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
